<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/linkToGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Goal List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp" />

    <Button
        android:id="@+id/linkToExpense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Expense List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkToGoal"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp" />

    <Button
        android:id="@+id/linkToTransaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Transaction List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkToExpense"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp" />

    <Button android:id="@+id/addIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add Income"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkToTransaction" />


    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addIncome"
        app:layout_constraintVertical_bias="0.489"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="134dp" />

<!--    <TextView-->
<!--        android:id="@+id/signedInUser"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="4dp"-->
<!--        android:text="User"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.501"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linkToTransaction"-->
<!--        tools:layout_conversion_absoluteHeight="28dp"-->
<!--        tools:layout_conversion_absoluteWidth="53dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>